--- a/series.html
+++ b/series.html
@@ -58,13 +58,13 @@
 <section class="movies container" id="oneh">
     <!-- Heading -->
         <div class="heading" >
-            <h2 class="heading-title">ACTION</h2>
+            <h2 class="heading-title">SERIES</h2>
         </div>
         <!-- Movies Content -->
         <div class="movies-content">
         <!-- Movies Box 1 -->
         <div class="movie-box">
-             <img src="img/S4.jpg" alt="" class="movie-box-img">
+             <img src="img/s4.jpg" alt="" class="movie-box-img">
             <div class="box-text">
                 <h2 class="movie-title">BOYS OVER FLOWERS/h2>
                 <span class="movie-type">Drama</span>
@@ -119,7 +119,7 @@
         </div>
         <!-- Movies Box 6 -->
         <div class="movie-box">
-             <img src="img/s6.pNg" alt="" class="movie-box-img">
+             <img src="img/s6.png" alt="" class="movie-box-img">
             <div class="box-text">
                 <h2 class="movie-title">INTO THE NIGHT</h2>
                 <span class="movie-type">Drama</span>
