--- a/his.html
+++ b/his.html
@@ -75,7 +75,7 @@
         </div>
         <!-- Movies Box 2 -->
         <div class="movie-box">
-             <img src="img/h2.jpg" alt="" class="movie-box-img">
+             <img src="img/h2.JPG" alt="" class="movie-box-img">
             <div class="box-text">
                 <h2 class="movie-title">TROY</h2>
                 <span class="movie-type">Action</span>
