--- a/his.html
+++ b/his.html
@@ -58,7 +58,7 @@
 <section class="movies container" id="oneh">
     <!-- Heading -->
         <div class="heading" >
-            <h2 class="heading-title">ACTION</h2>
+            <h2 class="heading-title">HISTORY</h2>
         </div>
         <!-- Movies Content -->
         <div class="movies-content">
