--- a/ami.html
+++ b/ami.html
@@ -45,7 +45,7 @@
     <!-- Home -->
     <section class="home container" id="home">
         <!-- Home Image -->
-        <img src="img/02.jPG" alt=""  class="home-img">
+        <img src="img/02.JPG" alt=""  class="home-img">
         <!-- Home Text -->
         <div class="home-text">
             <h1 class="abc">DOLEX <br>CINEMA </h1>
